--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Mulish:wght@400;700;900;1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@300;400;500;600;700;800&family=Mulish:wght@400;700;900;1000&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -18,18 +18,84 @@
   }
 }
 
+@font-face {
+  font-family: "Bebas Neue Book";
+  src: url("/fonts/bebasneue-book.ttf");
+}
+
 @layer base {
   body {
-    @apply bg-black text-slate-100;
+    @apply bg-gray-950 text-gray-100;
   }
 }
 
 @layer components {
+  .icon {
+    @apply h-6 w-6 text-gray-200;
+  }
+
   .site-section {
     @apply w-full p-4 py-12;
   }
 
   .site-section > .wrapper {
-    @apply mx-auto max-w-7xl;
+    @apply mx-auto max-w-6xl;
+  }
+
+  .site-nav__list {
+    @apply flex items-center gap-4;
+  }
+
+  .site-nav__link {
+    @apply flex items-center gap-2 text-gray-200 hover:text-gray-100;
+  }
+
+  .site-header {
+    @apply fixed top-0 z-10 w-full bg-transparent p-6;
+  }
+
+  .site-header > .wrapper {
+    @apply mx-auto flex max-w-6xl items-center justify-center lg:justify-between;
+  }
+
+  .site-header .site-nav {
+    @apply max-lg:hidden;
+  }
+
+  .site-hero {
+    @apply relative bg-[url("/img/bg-1.svg")] bg-cover bg-center bg-no-repeat;
+  }
+
+  .site-hero > .wrapper {
+    @apply flex min-h-screen flex-col items-center justify-center text-center;
+  }
+
+  .site-hero .site-section__header,
+  .site-hero .site-nav {
+    @apply mt-auto;
+  }
+
+  .site-hero__caption {
+    @apply font-display text-4xl font-black uppercase lg:text-7xl;
+  }
+
+  .site-hero__subcaption {
+    @apply font-display text-lg font-semibold uppercase lg:text-2xl;
+  }
+
+  .site-hero__elements:nth-of-type(1) {
+    @apply absolute left-1/2 top-28 flex w-full max-w-md -translate-x-1/2 transform flex-col items-center px-8;
+  }
+
+  .site-hero__elements:nth-of-type(1) > * {
+    @apply font-bebasbook w-full pt-2 text-2xl font-light uppercase tracking-widest;
+  }
+  .site-hero__elements:nth-of-type(1) > *::after {
+    @apply mt-2 block h-[0.5px] w-full bg-gray-100/60;
+    content: "";
+  }
+
+  .site-hero__elements:nth-of-type(2) {
+    @apply font-bebas absolute bottom-28 left-1/2 flex w-full max-w-md -translate-x-1/2 transform flex-col items-center gap-2 px-8 text-lg uppercase tracking-widest;
   }
 }
