updates: Add PartnersSection component

--- a/app/globals.css
+++ b/app/globals.css
@@ -289,6 +289,22 @@
   @apply list-disc;
 }
 
+.partners-list {
+  @apply grid grid-cols-2 gap-12 lg:ml-auto lg:max-w-2xl;
+}
+
+.partners-list__item {
+  @apply mx-auto flex w-full max-w-lg flex-col-reverse items-center gap-4;
+}
+
+.partners-list__item:nth-of-type(3) {
+  @apply col-span-2;
+}
+
+.partners-list__item-title {
+  @apply text-lg uppercase;
+}
+
 @keyframes stroke {
   0% {
     stroke-dashoffset: 300;
